--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://admin:pl6RexLVEPGDdFnV@cluster0.b8jj3u9.mongodb.net/issuetracker?retryWrites=true&w=majority"
+
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="oj4FrEFPhG7QqkylTomy4IMqMFU3y6E2ngA8JYII92w="
