Configure google provider

--- a/.env
+++ b/.env
@@ -7,4 +7,9 @@
 DATABASE_URL="mongodb+srv://admin:pl6RexLVEPGDdFnV@cluster0.b8jj3u9.mongodb.net/issuetracker?retryWrites=true&w=majority"
 
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="oj4FrEFPhG7QqkylTomy4IMqMFU3y6E2ngA8JYII92w="
+
+NEXTAUTH_SECRET="9uOomwv5Eq9feSdcIUtlIkixV0tZQWxmdEQ1AeKjl5g="
+
+GOOGLE_CLIENT_ID="930220924564-52sd92gip0s8qvf3g9u9v8fhblbqp0r5.apps.googleusercontent.com"
+
+GOOGLE_CLIENT_SECRET="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"
